Add missing script.js to settings page for complete navbar functionality

--- a/settings_new.html
+++ b/settings_new.html
@@ -167,6 +167,7 @@
 	<div id="footer-container"></div>
 
 	<script src="components/footer.js"></script>
+	<script src="script.js"></script>
 	<script>
 	// Settings-Initialisierung in EINEM DOMContentLoaded-Block
 	document.addEventListener('DOMContentLoaded', function() {
