Add new Statistics page with comprehensive game stats, charts, and navigation menu integration

--- a/settings_new.html
+++ b/settings_new.html
@@ -31,6 +31,9 @@
 					<a href="faq.html" class="menu-item">
 						<i class="fas fa-circle-question"></i> FAQ
 					</a>
+					<a href="stats.html" class="menu-item">
+						<i class="fas fa-chart-bar"></i> Statistik
+					</a>
 					<a href="settings_new.html" class="menu-item">
 						<i class="fas fa-cog"></i> Einstellungen
 					</a>
