--- a/faq.html
+++ b/faq.html
@@ -35,6 +35,9 @@
                     <a href="help.html" class="menu-item">
                         <i class="fas fa-book"></i> Hilfe
                     </a>
+                    <a href="stats.html" class="menu-item">
+                        <i class="fas fa-chart-bar"></i> Statistik
+                    </a>
                     <a href="settings_new.html" class="menu-item">
                         <i class="fas fa-cog"></i> Einstellungen
                     </a>
